# Backprop

./: CMakeLists.txt  Readme.md  example.cpp
Backprop/: Activation.h  Convolutional.h  Core.h  Cost.h  Display.h  Dropout.h  ELU.h  Layer.h  Linear.h  MNIST.h  Network.h  Optimize.h  PCFD.h  Plot.h  Reshape.h  Sampling.h  SoftMax.h  Timer.h  Types.h  Utils.h
data/MNIST/: get_mnist.py
example/: ex1.cpp  ex2.cpp  ex3.cpp
examples/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
src/: Activation.cpp  Activation.h  Cost.cpp  Cost.h  Display.cpp  Display.h  Layer.cpp  Layer.h  Linear.cpp  Linear.h  Log.h  MNIST.cpp  MNIST.h  Network.cpp  Network.h  Tensor1D.cpp  Tensor1D.h  Tensor2D.cpp  Tensor2D.h  Tensor3D.cpp  Tensor3D.h  Timer.cpp  Timer.h
